--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dependencies": {
         "laravel-precognition-vue": "^0.5.4",
         "laravel-precognition-vue-inertia": "^0.5.4",
+        "vue-the-mask": "^0.11.1",
+        "vue-toast-notification": "^3.1.2",
         "vuetify": "^3.5.9"
     }
 }
