--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vue": "^3.3.13"
     },
     "dependencies": {
+        "jspdf": "^2.5.1",
         "laravel-precognition-vue": "^0.5.4",
         "laravel-precognition-vue-inertia": "^0.5.4",
         "vue-the-mask": "^0.11.1",
