--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "jspdf": "^2.5.1",
+        "jspdf-autotable": "^3.8.2",
         "laravel-precognition-vue": "^0.5.4",
         "laravel-precognition-vue-inertia": "^0.5.4",
         "vue-the-mask": "^0.11.1",
