--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "laravel/jetstream": "^5.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "owen-it/laravel-auditing": "^13.6",
+        "owen-it/laravel-auditing": "*",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
