--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vue": "^3.3.13"
     },
     "dependencies": {
+        "date-fns": "^3.6.0",
         "jspdf": "^2.5.1",
         "jspdf-autotable": "^3.8.2",
         "laravel-precognition-vue": "^0.5.4",
