--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "jspdf-autotable": "^3.8.2",
         "laravel-precognition-vue": "^0.5.4",
         "laravel-precognition-vue-inertia": "^0.5.4",
+        "lodash": "^4.17.21",
         "vue-the-mask": "^0.11.1",
         "vue-toast-notification": "^3.1.2",
         "vuetify": "^3.5.9"
